fix test script warning

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,5 +26,5 @@ steps:
 
 - script: |
     pip install pytest pytest-azurepipelines
-    pytest
+    python -m pytest -o junit_family=xunit2
   displayName: 'pytest'
